horizontal scroll fixed

--- a/src/index.css
+++ b/src/index.css
@@ -24,24 +24,25 @@ a:hover {
 
 body {
   margin: 0;
+  /* margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
 
-.page {
+/* .page {
   height: 100vh;
   width: 100vw;
-}
+} */
 
 header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 300px;
-  width: 100vw;
+  width: 100%;
   background: url(../public/wesley-tingey-_0sEjWfAK3Q-unsplash.jpg);
 }
 
@@ -62,15 +63,18 @@ form {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 100%;
+  width: 70%;
 }
 
 ul {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(345px, 1fr));
   justify-content: center;
+  row-gap: 8px;
   align-items: center;
-  width: inherit;
+  padding: 0;
+  width: 100%;
+  padding: 0;
 }
 
 li {
@@ -79,6 +83,15 @@ li {
   padding: 2px;
   align-items: center;
   width: auto;
+  padding: 0;
+}
+
+.desc-box {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  margin: 0;
+  visibility: hidden;
 }
 
 img {
